Add bare-metal README
Add chapter: Development environment prepare

Signed-off-by: kinjon <kinjon.wang@qq.com>

--- a/bare-metal/openocd.cfg
+++ b/bare-metal/openocd.cfg
@@ -12,4 +12,4 @@ target create $_TARGETNAME riscv -chain-position $_TARGETNAME
 
 $_TARGETNAME configure -work-area-phys 0x81000000 -work-area-size $_WORKAREASIZE -work-area-backup 0
 
-gdb_report_data_abort enable
+gdb report_data_abort enable
